2018-06-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/import.c (ImportViewPixelArea): Use appropriate
	bits_per_sample validations for FloatQuantumSampleType. Fixes
	oss-fuzz 8780 "graphicsmagick/coder_PTIF_fuzzer:
	Use-of-uninitialized-value in HorizontalFilter". (Credit to
	OSS-Fuzz)

2018-06-09  Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* coders/mat.c More than 4GiB are not supported in MAT!

2018-06-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/mat.c (ReadMATImage): Add casts to avoid arithmetic
	overflow when computing size and offsets.  Fixes oss-fuzz 8801
	"graphicsmagick/coder_MAT_fuzzer: Timeout in
	graphicsmagick_coder_MAT_fuzzer". (Credit to OSS-Fuzz)

	* magick/blob.c (ReadBlobLSBDoubles, ReadBlobMSBDoubles): Only
	byte-swap doubles or test doubles for NAN if we have read enough
	bytes for at least one double value.
	(ReadBlob): Add an assertion to enforce that ReadBlob() will never
	report reading more bytes than requested due to some
	implementation issue.

2018-06-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/blob.c (ReadBlob, WriteBlob): gzread(), BZ2_bzread(),
	gzwrite(), BZ2_bzwrite() return type 'int' rather than 'size_t'
	like their stdio equivalents.  Use correct signed type to avoid
	returning a negative value into an unsigned type, forming a huge
	positive value.  Fixes oss-fuzz 8600
	"graphicsmagick/coder_MAT_fuzzer: Heap-buffer-overflow in
	ReadBlobLSBDoubles". (Credit to OSS-Fuzz)

2018-06-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/png.c (png_read_raw_profile): Try to shore up parsing of
	raw profile reading to avoid heap read overruns.  Fixes oss-fuzz
	8763 "graphicsmagick/coder_PNG32_fuzzer: Heap-buffer-overflow in
	png_read_raw_profile". (Credit to OSS-Fuzz)

2018-06-07  Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* coders/mat.c Reduce stack usage for 64 bit architecture.

2018-06-06  Fojtik Jaroslav  <JaFojtik@seznam.cz>
